- added undo/redo - can create rectangles - eraser tool - snip/paste works - cut/paste works